# RaceCar-Multiplayer

./: .clang-format  CMakeLists.txt
Game/: CMakeLists.txt
Game/src/: main.cpp
Game/src/amConnectivity/: Connection.cpp  Connection.hpp  SyncHelpper.hpp
Game/src/amGame/: Game.cpp  Game.hpp  GameHandler.hpp  GameSettings.hpp
Game/src/amGeometry/: GeometryRenderer.cpp
Game/src/amUI/: BoundingBox2d.hpp  MainMenu.cpp  UIElement.hpp
Game/src/amUtilities/: Colors.hpp  Timer.hpp
Game/src/core/: engine.cpp  world.cpp  world.h
Server/: CMakeLists.txt  main.cpp
Server/src/: Client.cpp  Client.hpp  DataArray.hpp  DataBuffer.hpp  SerializationHelper.hpp  Server.cpp  Server.hpp
assets/models/mele/: F1.fbx
src/: main.cpp
src/amConnectivity/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp
src/amCustomShaders/2dShaders/: 2dFragmentShader.glsl
src/amCustomShaders/3dShaders/: LightFragmentShader.glsl  TextureFragmentShader.glsl  TextureVertexShader.glsl
src/amGame/: Game.cpp  Game.hpp  GameHandler.hpp  GameSettings.hpp
src/amGame/Display/: ProgressHandler.hpp  ScreenElements.hpp  Speedometer.hpp
src/amGame/GameComponents/: BaseCar.hpp  Car.cpp  Car.hpp  Field.hpp  GameComponent.hpp  GameComponentPositionGenerator.cpp  GameComponentPositionGenerator.hpp  NPCCar.cpp  NPCCar.hpp  PlaceTracker.hpp  StreetLight.cpp  StreetLight.hpp  Track.cpp  Track.hpp  TrackBuilder.cpp  TrackBuilder.hpp  Tree.cpp  Tree.hpp
src/amGame/Lighting/: Directional.hpp  LightSource.hpp  Point.hpp  Spot.hpp
src/amGeometry/: GeometryRenderer.cpp  GeometryRenderer.hpp
src/amUI/: Button.hpp  MainMenu.cpp  MainMenu.hpp  UIElement.hpp
src/amUtilities/: Camera.hpp  Colors.hpp  Timer.hpp  Utilities.hpp
src/components/: simple_scene.h
src/core/: engine.cpp  engine.h  world.cpp  world.h
(+58 files in other folders)
